--- a/Construction/Site1.Master
+++ b/Construction/Site1.Master
@@ -43,11 +43,11 @@
                         <nav id="navmenu" class="navmenu">
                             <ul>
                                 <li><a href="index.ASPX" class="active">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="services.html">Services</a></li>
-                                <li><a href="projects.html">Projects</a></li>
-                                <li><a href="blog.html">Blog</a></li>
-                               <%-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
+                                <li><a href="About.aspx">About</a></li>
+                                <li><a href="Services.aspx">Services</a></li>
+                                <li><a href="Projects.aspx">Projects</a></li>
+                                <li><a href="Blog.aspx">Blog</a></li>
+                                <%-- <li class="dropdown"><a href="#"><span>Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
                                     <ul>
                                         <li><a href="#">Dropdown 1</a></li>
                                         <li class="dropdown"><a href="#"><span>Deep Dropdown</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
@@ -63,8 +63,8 @@
                                         <li><a href="#">Dropdown 3</a></li>
                                         <li><a href="#">Dropdown 4</a></li>
                                     </ul>
-                                </li>--%>
-                                <%--<li><a href="contact.html">Contact</a></li>--%>
+                               <%-- </li>--%>
+                                <%--<li><a href="contact.html">contact</a></li>--%>
                                   <li><a href="Registration.aspx">Registration</a></li>
                             </ul>
                             <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
